<resources>
    <string name="app_name">CEDEHAA</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="inicio">Inicio</string>
    <string name="cursos">Cursos</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="usuario">Usuario</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="title_activity_teacher">TeacherActivity</string>

    <string name="title_activity_start">StartActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="empezar">Empezar</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_correo_invalido">El correo electrónico es inválido</string>
    <string name="error_contrasena_invalida">La contraseña es demasiado corta</string>
    <string name="error_contrasena_incorrecta">La contraseña es incorrecta</string>
    <string name="error_campo_requerido">Este campo es requerido</string>
    <string name="permission_rationale">"Se requieren permisos de contactos para proporcionar
        completamientos de correo electrónico."
    </string>
    <string name="nombres">Nombre/s</string>
    <string name="apellidos">Apellidos</string>
    <string name="numero_telefonico">Número telefónico (7 números)</string>
    <string name="estado">Estado</string>
    <string name="ciudad">Ciudad</string>
    <string name="aceptar_registro">Aceptar registro</string>
    <string name="leyenda_terminos_y_condiciones">Al aceptar registro, usted acepta los términos y condiciones del uso de la aplicación.</string>
    <string name="terminos_y_condiciones">Leer términos y condiciones</string>
    <string name="apellido_paterno">Apellido paterno</string>
    <string name="apellido_materno">Apellido materno</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="tus_cursos">Tus cursos</string>
    <string name="preview_course">preview_course</string>
    <string name="titulo_del_curso">Titulo del curso</string>
    <string name="descripcion_del_curso">Descripción breve del curso</string>
    <string name="available_course">available_course</string>
    <string name="descripcion_general_del_curso">Descripción general del curso</string>
    <string name="inscribirse">Inscribirse</string>
    <string name="cursos_a_ofrecer">Cursos a ofrecer</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="nombre_de_la_configuracion">Nombre de la configuración</string>
    <string name="mi_informacion">Mi información</string>
    <string name="acerca_de">Acerca de</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="recibir_notificaciones">Recibir notificaciones</string>
    <string name="olvidaste_tu_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="mantener_sesion_abierta">Mantener sesión abierta</string>
    <string name="imagen_del_curso">Imagen del curso</string>
    <string name="tipo_y_nombre_de_usuario">Tipo y nombre de usuario</string>
    <string name="mensaje_de_la_notificacion">Mensaje de la notificación</string>
    <string name="fecha_de_publicacion">Fecha de publicación</string>
    <string name="crear_curso_nuevo">Crear curso nuevo</string>
    <string name="crear_grupo_nuevo">Crear grupo nuevo</string>
    <string name="caracteres_contrasena">Mínimo 5 carácteres, puede usar mayúsculas, minúsculas, dígitos y alfanuméricos.</string>
    <string name="logo_login">logo_login</string>
    <string name="siguiente">Siguiente</string>
    <string name="img_notification">img_notification</string>
    <string name="aceptar_curso_nuevo">Aceptar curso nuevo</string>
    <string name="limite_de_estudiantes">Limite de estudiantes:</string>
    <string name="fecha_inicio">Fecha inicio:</string>
    <string name="selecciona_fecha_inicio">Selecciona la fecha de inicio</string>
    <string name="guion">-</string>
    <string name="aaaa">AAAA</string>
    <string name="mm">MM</string>
    <string name="dd">DD</string>
    <string name="valor_20">20</string>
    <string name="presionar_para_cambiar_imagen">Presiona en la imagen para cambiarla</string>
    <string name="podras_realizar_cambios">Posteriormente podrás realizar cambios</string>
    <string name="sin_cursos">Aún no hay cursos disponibles</string>
    <string name="button">Button</string>
    <string name="aceptar_cambios">Aceptar cambios</string>
    <string name="ejemplo_de_fecha">dd-mm-yyyy</string>
    <string name="omitir">Omitir</string>
    <string name="mantener_curso">Mantener curso</string>
    <string name="abierto">Abierto</string>
    <string name="cerrado">Cerrado</string>
    <string name="eliminar_curso">Eliminar curso</string>
    <string name="ver_mensajes">Ver mensajes</string>
    <string name="sin_curso_inscrito">Aún no estás dentro de un curso</string>
    <string name="sin_solicitudes_cursos">Aún no tienes solicitudes de cursos</string>
    <string name="error_tipo_de_usuario">Error con el tipo de usuario</string>
    <string name="solicitudes">Solicitudes</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <string name="llamar">Llamar</string>
    <string name="comilla_simple">No puede contener (\').</string>
    <string name="verificar_contrasena">No coincide la contraseña.</string>
    <string name="telefono_invalido">El número de teléfono es inválido.</string>
    <string name="verifica_tu_telefono">Verifica que sea correcto tu teléfono celular.</string>
    <string name="verificar_correo">Correo que revise con más frecuencia.</string>
    <string name="prefijo">Prefijo (722)</string>
    <string name="prefijo_invalido">El prefijo es inválido</string>
    <string name="espacios">No puede contener espacios.</string>
    <string name="numero_invalido">Número inválido</string>
    <string name="ver_alumnos">Ver alumnos</string>
    <string name="no_vacio">No puede estar vacío</string>
    <string name="introduccion">Dentro de esta aplicación\n\ntú tendrás la oportunidad\n\nde mejorar tus hábilidades\n\ny poner en práctica\n\ntus conocimientos en\n\nnuestros cursos.</string>
    <string name="registro">Registro</string>
    <string name="inicio_de_sesion">Inicio de sesión</string>
    <string name="estudiante">Estudiante</string>
    <string name="administrador">Administrador</string>
    <string name="registrarse_como">Registrarse como</string>
    <string name="nota_registro_admin">Administrador necesita aceptación del dueño.</string>
    <string name="codigo">Código</string>
    <string name="incorrecto">Incorrecto</string>
    <string name="imagen_para_el_curso">Elige una imagen para el curso</string>
    <string name="no_internet">No hay buena conexión de internet.</string>
    <string name="verify_internet_dialog_message">Necesitas conexión a Internet (WiFi o datos móviles) para el uso de la app.</string>
    <string name="verify_internet_dialog_title">Verifica tu Internet</string>
    <string name="actualizar">Actualizar aplicación</string>
    <string name="abc_esp_ABC">aábcdeéfghiíjklmnñóopqrstuvwxyz AÁBCDEÉFGHIÍJKLMNÑOÓPQRSTUVWXYZ</string>
    <string name="abc_ABC">aábcdeéfghiíjklmnñóopqrstuvwxyzAÁBCDEÉFGHIÍJKLMNÑOÓPQRSTUVWXYZ</string>
    <string name="n123">0123456789</string>
    <string name="abc_ABC_123">aábcdeéfghiíjklmnñóopqrstuvwxyz AÁBCDEÉFGHIÍJKLMNÑOÓPQRSTUVWXYZ 0123456789</string>
    <string name="digitos">aábcdeéfghiíjklmnñóopqrstuvwxyz AÁBCDEÉFGHIÍJKLMNÑOÓPQRSTUVWXYZ 0123456789 @-_+=(){}[]*%$#!?,.;\n: /?\\</string>
    <string name="intrucciones_reestablecer_contrasena">Te mandaremos un correo con un código.</string>
    <string name="mandar_codigo">Mandar código</string>
    <string name="reestablecer_contrasena">Reestablecer contraseña</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="verificar_codigo">Verificar código</string>
    <string name="reenviar_codigo">Reenviar código</string>
    <string name="instrucciones_reenviar_codigo">Espera unos segundos.\nEn caso de no recibirlo, presiona reenviar.</string>
</resources>
