<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical" >

  <ImageView
      android:id="@+id/imagen_foto_de_perfil"
      android:layout_width="70dp"
      android:layout_height="70dp"
      android:contentDescription="@string/foto_de_perfil"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_marginTop="10dp"
      android:layout_gravity="center"
      app:srcCompat="@drawable/placeholder" />

  <TextView
      android:id="@+id/texto_nombre"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/nombres"
      android:textStyle="bold|italic"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:textSize="18sp"
      android:gravity="center"/>

  <TextView
      android:id="@+id/texto_apellidos"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/apellidos"
      android:textStyle="italic"
      android:textSize="16sp"
      android:gravity="center"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_marginBottom="30dp"/>

  <TextView
      android:id="@+id/conf_mi_info"
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:gravity="center_vertical"
      android:clickable="true"
      android:focusable="true"
      android:text="@string/mi_informacion"
      android:textSize="16sp"
      android:textColor="#000" />

  <Switch
      android:id="@+id/conf_notificaciones"
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:text="@string/recibir_notificaciones"
      android:textSize="16sp"/>

  <TextView
      android:id="@+id/conf_cerrar_sesion"
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:layout_marginTop="15dp"
      android:gravity="center_vertical"
      android:clickable="true"
      android:focusable="true"
      android:text="@string/cerrar_sesion"
      android:textSize="16sp"
      android:textColor="#000" />

  <TextView
      android:id="@+id/conf_acerca_de"
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:gravity="center_vertical"
      android:clickable="true"
      android:focusable="true"
      android:text="@string/acerca_de"
      android:textSize="16sp"
      android:textColor="#000" />

</LinearLayout>