<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="2dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="2dp"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="72dp">

        <ImageView
            android:id="@+id/imagen_item_de_la_solicitud"
            android:layout_width="62dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:contentDescription="@string/preview_course"
            app:srcCompat="@drawable/profile_photo" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5">

        <TextView
            android:id="@+id/texto_curso_solicita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/titulo_del_curso"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/texto_fecha_curso_solicita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/ejemplo_de_fecha"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:textStyle="italic"
            android:visibility="gone"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:id="@+id/texto_nombre_solicita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="@string/nombres"
                android:textColor="#000000"
                android:textSize="12sp"
                android:layout_marginEnd="4dp" />

            <TextView
                android:id="@+id/texto_apellido_pat_solicita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellido_paterno"
                android:textColor="#000000"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/texto_correo_solicita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correo_electronico"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/texto_telefono_solicita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numero_telefonico"
            android:textColor="@color/colorTextGreen"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <Button
                android:id="@+id/boton_llamar_solicitud"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:layout_marginRight="4dp"
                android:background="@drawable/boton_secundario"
                android:textColor="#fff"
                android:text="@string/llamar"
                android:textSize="12sp"
                android:layout_marginEnd="4dp" />

            <Button
                android:id="@+id/boton_aceptar_solicitud"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/boton_verde"
                android:textColor="#fff"
                android:text="@string/aceptar"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/boton_rechazar_solicitud"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"
                android:background="@drawable/boton_rojo"
                android:textColor="#fff"
                android:text="@string/rechazar"
                android:textSize="12sp"
                android:layout_marginStart="4dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>